--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -1,5 +1,7 @@
 .btncustom{
     display: inline-block;
+    position: relative;
+    top: 1px;
 }
 .btn-custom-sky{
     padding: 5px 30px ;
@@ -14,7 +16,7 @@
 }
 .btn-custom-sky:active{
     position: relative;
-    top: 1px;
+    top: 2px;
 }
 .btn-custom-delete{
     padding: 7px 10px ;
@@ -27,10 +29,21 @@
 }
 .btn-custom-delete:active{
     position: relative;
-    top: 1px;
+    top: 2px;
 }
 .necessary{
     font-size: 20px;
     color: RED;
+}
+.label-control-custom{
+    padding-top: 7px;
+}
+.form-custom .label-control {
+    padding-top: 7px;
+    margin-bottom: 0;
+    text-align: right;
+}
+.file{
+    text-align: center;
 }
 
